srcs/nginx/nginx_deployment_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: nginx.federnetes.com
    http:
      paths:
      - backend:
          serviceName: nginx-ingress
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nginx-ingress
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      containers:
      - name: echoserver
        image: nginx
        ports:
        - containerPort: 80
